@@ -37,6 +37,8 @@ Improvements
 * Add ``GGti::overlap()`` method.
 * [`2909 <https://cta-redmine.irap.omp.eu/issues/2909>`_] -
   Add ``GTime.datetime()`` method and add optional precision to ``GTime.utc()`` method.
+* [`1855 <https://cta-redmine.irap.omp.eu/issues/1855>`_] -
+  Add ``GSkyDir::moon()`` method.
 * [`1854 <https://cta-redmine.irap.omp.eu/issues/1854>`_] -
   Add ``GSkyDir::sun()``, ``GSkyDir::precess()`` and ``GTime::julian_epoch()`` methods.
 
