@@ -54,6 +54,7 @@ public:
     void          rotate_deg(const double& phi, const double& theta);
     void          precess(const double& from_epoch, const double& to_epoch);
     void          sun(const GTime& time, const double& epoch = 2000.0);
+    void          moon(const GTime& time, const double& epoch = 2000.0);
     const double& l(void) const;
     const double& b(void) const;
     const double& ra(void) const;
