@@ -1,4 +1,4 @@
-2019-11-12
+2019-11-13
 
         * Version 1.7.0 released
         ========================
@@ -14,6 +14,7 @@
         Correctly write model attributes in GCOMModelDRBFitting class
         Add GTime.datetime() method and add optional precision to GTime.utc() (#2909)
         Remove obsolete methods from GCTAResponseCache class (#2893)
+        Add GSkyDir::moon() method (#1855)
         Add GSkyDir::sun(), GSkyDir::precess() and GTime::julian_epoch() methods
           (#1854)
 
